--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,6 @@
         "illuminate/routing": "^5.7|^6.0|^7.0|^8.0",
         "illuminate/support": "^5.7|^6.0|^7.0|^8.0",
         "league/flysystem": "^1.0",
-        "mpociot/documentarian": "^0.4.0",
         "mpociot/reflection-docblock": "^1.0.1",
         "nunomaduro/collision": "^5.0",
         "ramsey/uuid": "^3.8|^4.0",
@@ -34,6 +33,7 @@
         "league/fractal": "^0.19.0",
         "orchestra/testbench": "^3.7|^4.0|^5.0",
         "phpstan/phpstan": "^0.11.15",
+        "mpociot/documentarian": "dev-master",
         "phpunit/phpunit": "^8.0"
     },
     "suggest": {
